WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310371
[iOS] dictionary.com: Unable to select text
https://bugs.webkit.org/show_bug.cgi?id=310371
Summary
[iOS] dictionary.com: Unable to select text
Aditya Keerthi
Reported
2026-03-20 10:18:38 PDT
rdar://154850334
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2026-03-20 10:27:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61018
EWS
Comment 2
2026-03-20 14:13:45 PDT
Committed
309633@main
(7fab6bc21aeb): <
https://commits.webkit.org/309633@main
> Reviewed commits have been landed. Closing PR #61018 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug