[iOS] dictionary.com: Unable to select text https://bugs.webkit.org/show_bug.cgi?id=310371 rdar://154850334

Reviewed by Tim Horton.

dictionary.com and thesaurus.com are sister sites. In 286499@main, a quirk was
deployed to fix the inability to select text on thesaurus.com. dictionary.com
has the exact same issue, so the quirk should be extended.

See 286499@main for more details.

* Source/WebCore/page/Quirks.cpp:
* Source/WebCore/page/QuirksData.h:

Canonical link: https://commits.webkit.org/309633@main