Source/WebCore/page/QuirksData.h
@@ -35,6 +35,7 @@ struct QuirksData {
     bool isBankOfAmerica : 1 { false };
     bool isBing : 1 { false };
     bool isCBSSports : 1 { false };
+    bool isDictionary : 1 { false };
     bool isEA : 1 { false };
     bool isESPN : 1 { false };
     bool isFacebook : 1 { false };
